# juris

./: .gitignore  README.md  docker-compose.yml
backend/: .env  config.py  embedding_faiss.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/modules/logic/v1.0.0/: logic.py  module.yaml
backend/modules/retrieval/v1.0.0/: module.yaml  retrieval.py
backend/modules/retrieval/v1_0_0/: retrieval.py
backend/modules/template/v1.0.0/: module.yaml  template.py
docs/: module_contracts.md  tech_debt_and_notes.md
faiss_indexes/head/: index.faiss  texts.pkl
first_try/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  test_app.py
